signup flow created

--- a/backend/ai_blog_app/templates/index.html
+++ b/backend/ai_blog_app/templates/index.html
@@ -30,7 +30,7 @@
                             <button type="submit" class="btn btn-primary w-100">Entrar</button>
                         </form>
                     </li>
-                    <li><a class="dropdown-item" href="/register">Registrar-se</a></li>
+                    <li><a class="dropdown-item" href="signup">Registrar-se</a></li>
                 </ul>
             </nav>
         </div>
