--- a/backend/ai_blog_app/templates/signup.html
+++ b/backend/ai_blog_app/templates/signup.html
@@ -7,13 +7,21 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <h1>Login</h1>
-                <form class="form-signin" method="post" action="processar_login.php">
+                <form class="form-signin" method="POST" action="">
+                    {% csrf_token %}
+                    {% if error_message %}
+                    <div>
+                        <h2>
+                            {{error_message}}
+                        </h2>
+                    </div>
+                    {% endif %}
                     <input placeholder="Usuário" type="username" id="username" name="username" required>
                     <input placeholder="Email" type="email" id="email" name="email" required>
                     <br>
                     <input placeholder="Senha" type="password" id="senha" name="senha" required>
                     <br>
-                    <input placeholder="Repita a senha" type="password2" id="senha2" name="Repita a senha" required>
+                    <input placeholder="Repita a senha" type="password2" id="senha2" name="repeatSenha" required>
                     <button type="submit">Entrar</button>
                 </form>   
 
