implementado assembly ai e open ai mas com problemas com o pytube

--- a/backend/ai_blog_app/templates/login.html
+++ b/backend/ai_blog_app/templates/login.html
@@ -7,17 +7,16 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <h1>Login</h1>
-                <form class="form-signin" method="post" action="processar_login.php">
+                <form class="form-signin" method="POST" action="">
+                    {% csrf_token %}
                     <input placeholder="Usuário" type="username" id="username" name="username" required>
-                    <input placeholder="Email" type="email" id="email" name="email" required>
                     <br>
                     <input placeholder="Senha" type="password" id="senha" name="senha" required>
                     <br>
-                    <input placeholder="Repita a senha" type="password2" id="senha2" name="Repita a senha" required>
                     <button type="submit">Entrar</button>
                 </form>   
 
-                <a href="#">Não tem cadastro? Cadastre-se!</a>
+                <a href="signup">Não tem cadastro? Cadastre-se!</a>
             </div>
         </div>
     </div>
